Fixed scrollbar

--- a/src/features/WorkTimer/components/Scene/Scene.module.css
+++ b/src/features/WorkTimer/components/Scene/Scene.module.css
@@ -10,7 +10,7 @@ div.scene figure.image {
   width: 100%;
   height: 100%;
   margin: 0;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 .image img {
